--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,6 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
 }
 
 .nazev {
@@ -137,5 +135,9 @@ s {
 .sleva__holder {
     display: flex;
     justify-content: right;
+}
+
+header {
+    height: 270px;
 }
 
