--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,46 @@
 .karty {
     display: flex;
     flex-wrap: wrap;
-    margin-left: auto;
+    margin: 10px;
+}
+
+body {
+    margin: 0;
 }
 
 .karty > *{
-    flex-grow: 0;
-    flex-basis: calc(100% / var(--column) - 20px);
     max-width: 250px;
     margin: 0;
-    justify-content: center;
 }
 
 .nalepky {
     display: flex;
     position: absolute;
-    justify-content: left;
+    left: 0;
     flex-direction: column;
+    top: 0;
 }
 
 .image{ 
-    max-height: 280px;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .karta {
     padding: 20px;
 }
 
+.karta__header {
+    height: 270px;
+    position: relative;
+}
+
 .nazev {
     height: 3em;
     line-height: 1.5;
     overflow: hidden;
+    color: #060606;
 }
 
 .info {
@@ -47,6 +56,8 @@
     border-top: 1px solid #dfdfdf;
     text-align: center;
     padding-top: 10px;
+    height: 3em;
+    line-height: 1.5;
 }
 
 .cena {
@@ -84,7 +95,6 @@ s {
     border-radius: .5em;
     border: hidden;
     display: block;
-    cursor: pointer;
 }
 
 .gift {
@@ -108,11 +118,6 @@ s {
     background-color: #3da4b0;
 }
 
-.holder {
-    display: flex;
-    justify-content: center;
-    min-width: 270px;
-}
 
 .sleva {
     position: absolute;
@@ -125,18 +130,11 @@ s {
     line-height: 1;
     font-size: 14px;
     color: white;
+    right: 0;
 }
 
 .sleva__text {
     margin-top: 25%;
 }
 
-.sleva__holder {
-    display: flex;
-    justify-content: right;
-}
-
-header {
-    height: 270px;
-}
 
